Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-38257

Mac Accessibility: Empty lines in QTextEdit read wrongly

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.3.1
    • 5.3.0 Beta1
    • None
    • macOS
    • 58e48831f17f154e4b7a4cd9b519e9ce4e645d8c

    Description

      Reading a text with empty lines will read the following line instead of the empty line when the cursor is on it.

      Attachments

        For Gerrit Dashboard: QTBUG-38257
        # Subject Branch Project Status CR V

        Activity

          People

            frederik Frederik Gladhorn
            frederik Frederik Gladhorn
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes